# UCBlock

./: CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py
cmake/: UCBlockConfig.cmake.in
include/: BatteryUnitBlock.h  DCNetworkBlock.h  ECNetworkBlock.h  HeatBlock.h  HydroSystemUnitBlock.h  HydroUnitBlock.h  IntermittentUnitBlock.h  NetworkBlock.h  NuclearUnitBlock.h  SlackUnitBlock.h  ThermalUnitBlock.h  ThermalUnitDPSolver.h  UCBlock.h  UnitBlock.h
lib/: makefile  makefile-c  makefile-inc  makefile-lib
src/: BatteryUnitBlock.cpp  DCNetworkBlock.cpp  ECNetworkBlock.cpp  HeatBlock.cpp  HydroSystemUnitBlock.cpp  HydroUnitBlock.cpp  IntermittentUnitBlock.cpp  NetworkBlock.cpp  NuclearUnitBlock.cpp  SlackUnitBlock.cpp  ThermalUnitBlock.cpp  ThermalUnitDPSolver.cpp  (+2 more)
tools/: CMakeLists.txt  makefile  nc4generator.cpp
tools/DataConverter/: README.md
tools/DataConverter/csv2netCDF/: csv2nc4.jl  energy_community_model_CO.yml  energy_community_model_CO_nest.yml  energy_community_model_CO_sto.yml  energy_community_model_NA.yml  energy_community_model_NA_sto.yml  energy_community_model_NC.yml  energy_community_model_NC_sto.yml  gen-all-nc4  input_resource_sto.csv  market_data_NC.csv  market_data_NC_sto.csv  market_data_sto.csv  pem_extraction.jl  point_scen_eps_sampler.jl  utils.jl
tools/DataGenerator/: README.md
tools/DataGenerator/UC2SMSpp/: UC2SMSpp.m  determineHydroConsistency.m  readConso.m  readDataBlock.m  readGroupes.m  readHydroValleys.m  readPDF.m  readPLANNHYD.m  readPlanPui.m  readRESERVES.m  readUSINES.m  readVALLEES.m  writeHydroValley2SMSpp.m
